# reaction-aggregator

./: .gitignore  Dockerfile  README.md  compose.yaml  justfile  pyproject.toml
app/: main.py  seed.py
app/adapters/: duckdb_warehouse.py  fake_source.py  fake_warehouse.py  mock_source.py  mock_warehouse.py  sqlite_source.py
app/application/: pipeline.py  registry.py
app/domain/: fact.py  mapping.py  models.py  tables.py
app/domain/mappings/: creative.py  session.py  viewer.py
app/domain/ports/: source.py  warehouse.py
docs/: decisions.md
notebooks/: warehouse_analysis.ipynb
tests/: conftest.py  test_creative.py  test_duckdb_warehouse.py  test_fact_builder.py  test_pipeline.py  test_seed.py  test_session.py  test_smoke.py  test_sqlite_source.py  test_viewer.py
