[project]
name = "reaction-aggregator"
version = "0.1.0"
description = "Aggregate step: session-scoped ETL from scored biometric reactions to a star-schema warehouse"
requires-python = ">=3.13"
dependencies = ["pydantic>=2.7", "duckdb>=1.0"]

[project.scripts]
reaction-aggregator = "app.main:main"
seed-source = "app.seed:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5"]
notebook = ["jupyterlab>=4", "matplotlib>=3", "pandas>=2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app/domain", "app/application"]

[tool.coverage.report]
fail_under = 90
show_missing = true
